all sections contain text

--- a/references.bib
+++ b/references.bib
@@ -372,7 +372,7 @@
 }
 
 @misc{faiss-github,
-	title = {Faiss, A library for efficient similarity search and clustering of dense vectors - Facebook Research},
+	title = {Faiss, A library for efficient similarity search and clustering of dense vectors - {F}acebook {R}esearch},
 	howpublished = {\url{https://github.com/facebookresearch/faiss}}
 }
 
@@ -415,3 +415,9 @@
 	year={2002},
 	organization={IEEE}
 }
+
+@misc{rmac-github,
+	title = {Re-implementation of Regional Maximum Activations of Convolutions ({RMAC}) feature extractor for {K}eras},
+	howpublished = {\url{https://github.com/noagarcia/keras_rmac}}
+}
+
