--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,12 @@
 \maketitle
 \newpage
 
+\begin{abstract}
+This thesis presents research on image retrieval-based approaches for recurrent content detection in VOD TV-shows. The methods utilize feature vectors
+constructed from video frames to compare similarities across TV-show episodes. It is found that such methods has potential but there remains room for improvement for true unsupervised detection.
+\end{abstract}
+\newpage
+
 \tableofcontents
 \newpage
 
@@ -47,7 +53,7 @@ With the subquestions: \\
 	\textit{\textbf{How accurate is each image retrieval approach?\newline}}\\
 	\textit{\textbf{How can the best method be utilized in practice?\newline}}
 \end{adjustwidth}
-This thesis aims to answer aforementioned research questions. The rest of this section will be used to expand on the different type of video classes which this research is focused on. Section \ref{relatedwork} explains all of the related work. In section \ref{section:imageretrieval} image retrieval and the used methods are expanded upon. Section \ref{methodology} describes the data and methodology and then the produced results are presented in section \ref{results}. Lastly, the results are discussed and a conclusion is drawn in section \ref{discussion}.
+This thesis aims to answer aforementioned research questions. Our hypothesis is that we can get near perfect retrieval results with such methods. The rest of this section will be used to expand on the different type of video classes which this research is focused on. Section \ref{relatedwork} explains all of the related work. In section \ref{section:imageretrieval} image retrieval and the used methods are expanded upon. Section \ref{methodology} describes the data and methodology and then the produced results are presented in section \ref{results}. Lastly, the results are discussed and a conclusion is drawn in section \ref{discussion}.
 
 \subsection{Recurring Content Classes} \label{section:segmentclasses}
 In this section we will give a background on the different types of content to be detected. What all the content classes have in common is that they (partially) reappear in previous or future episodes. We will use this attribute for the detection. 
@@ -150,7 +156,7 @@ With the unsupervised methods the authors typically do a dimensionality reductio
 %vergelijkbare dingen
 Abduraman et al.\ \cite{abduraman2011unsupervised} propose a system to detect repeated sequences in streams by performing a DCT operation on all of the frames in the stream and then use a micro clustering technique to detect repeated sequences. They were also able to link the trailers to their respective programs that occur at a later point in the stream.
 
-All of the previously mentioned works in this section never cover the specific topic of segmenting the classes mentioned in section \ref{section:segmentclasses} or use other properties only available to broadcast streams such as the EPG. The methods yielded high accuracies in the range of 90\% - 95\% precision, also most research is from many years ago and work that focuses on repeated sequence detection in broadcast streams do not vary much in methodology. This work is not focused on broadcast streams and aims for higher accuracies and thus will not be replicating the previously mentioned methodologies, however from the aforementioned papers we conclude that a large dimensionality reduction step will be necessary to efficiently process a large visual data set.
+All of the previously mentioned works in this section never cover the specific topic of segmenting the classes mentioned in section \ref{section:segmentclasses} or use other properties only available to broadcast streams such as the EPG. The methods also focused  on recurrent content detection are exclusively based on detection of moderate to long sequences, it does not cover short recurrent sequences stitched together such as a recap. The methods yielded high accuracies in the range of 90\% - 95\% precision, also most research is from many years ago and work that focuses on repeated sequence detection in broadcast streams do not vary much in methodology. This work is not focused on broadcast streams and aims for higher accuracies and thus will not be replicating the previously mentioned methodologies, however from the aforementioned papers we conclude that a large dimensionality reduction step will be necessary to efficiently process a large visual data set.
 \\
 
 Dimensionality reduction and efficient matching of large amounts of visual data is important within content based image retrieval, Zheng et al. give a very detailed summary of all the significant contributions from past years \cite{zheng2018sift}. Their summary covers three periods in image retrieval: Early methods, SIFT-based methods and Convolutional Neural Network (CNN) based methods. Smeulders et al. present all the contributions of the early methods \cite{smeulders2000content}, these methods focused on looking at the color, texture and local geometry of images for retrieval \cite{yu2002color,manjunath1996texture}. Not much later the Bag-of-words (BoW) model was proposed as a new method for image retrieval \cite{sivic2003video}. The advantage of this is that inverted indexes can be used for immediate retrieval of similar images. The BoW model paired with SIFT-descriptors \cite{lowe2004distinctive} as the feature vectors was used in image retrieval research for years \cite{nister2006scalable,philbin2007object,jegou2008hamming,jegou2010aggregating,jegou2012aggregating}. Since 2012 when the convolutional neural network was introduced \cite{krizhevsky2012imagenet} research switched to CNN-based methods for image retrieval because they achieved better performance on several image retrieval tasks	 \cite{babenko2014neural,yue2015exploiting, tolias2015particular}.
@@ -246,7 +252,7 @@ A color histogram is a representation of the distribution of colors in an image.
 Color histograms are global descriptors because they describe the image on a global level.
 
 \subsection{Color Texture Moments}
-Color texture moments as proposed by Yu et al. \cite{yu2002colortexturemoments} are a low-level feature descriptor that integrates both color and texture characteristics of an image. An image is converted from RGB to HSV color space, and on each color map a 2d convolution is applied for each filter shown in figure \ref{fig:filters}.
+Color texture moments as proposed by Yu et al. \cite{yu2002colortexturemoments} are a low-level feature descriptor that integrates both color and texture characteristics of an image. An image is converted from RGB to HSV color space, and on each color map a 2d convolution is applied for each 3x3 filter shown in figure \ref{fig:filters}.
 
 \begin{figure}[H]
 	\includegraphics[width=5cm]{images/filters.png}
@@ -258,21 +264,37 @@ Color texture moments as proposed by Yu et al. \cite{yu2002colortexturemoments} 
 Which results in 8 channels for each color map, 24 channels in total. For each of the resulting channels the first and second color moments, which are the mean and standard deviation, are taken. This results in a 48-dimensional feature vector.
 
 \subsection{CNN Features} 
-Convolutional neural networks are very good at image classification and segmentation tasks. However it was found that using the resulting channels after the convolution layers as feature vectors also perform well at image retrieval tasks.
-TODO EXPAND
+Convolutional neural networks are very good at image classification and segmentation tasks. However it was found that using the resulting channels after the convolution layers as feature vectors also perform well at image retrieval tasks. There are many ways to construct CNN feature vectors that perform well as described in \cite{zheng2018sift}.
+
+We will use the Regional Maximum Activation of Convolutions (R-MAC) method introduced by Tolias et al. \cite{tolias2015particular} as our implementation for the feature vectors. The frames are fed through a pre-trained VGG16 neural network. The last fully connected layers of the network are discarded, and the resulting channels with activations from the convolutional layers are divided up into regions. For each of these regions the Maximum Activations of Convolutions (MAC) feature vector is calculated, and all these feature vectors are then post-processed by applying L2-normalization, PCA-whitening and L2-normalization. Then all the feature vectors are summed into one resulting feature vector and L2-normalization is applied as the final step. For a more extensive description, one can refer to \cite{tolias2015particular}.
 
 \section{Methodology} \label{methodology}
-We want to explore whether we can detect recurring content unsupervised and if so, which method of feature vector construction scores the best in terms of precision and recall. Initially a non-generalized approach was tried, where a unique method for each content class was tried (For example: OCR for textual closing credits, similarity matrices for opening credits and feature based classification). However, this was soon found to be ineffective because of a high variety of edge cases in creative non-structured video content. 
+We want to explore whether we can detect recurring content unsupervised and if so, which method of feature vector construction scores the best in terms of precision and recall. Initially a non-generalized approach was tried, where a unique method for each content class was used (For example: OCR for textual closing credits, similarity matrices for opening credits and feature based classification). However, this was soon found to be ineffective because of a high variety of edge cases in creative non-structured video content. 
 
-The characteristic of all the segment classes is that they reoccur either in previous or future episodes. To match frames from one episode with other episodes, feature vectors will be constructed from the frames and the distances between these vectors will be computed and saved. If a part of the video consecutively has matching feature vectors from previous or future episodes, then that part is labeled as a recurring segment. It is therefore important that the resulting feature vectors do not mismatch between actual recurring content and content that looks alike. Methods chosen for construction of the feature vectors should therefore not result in feature vectors of very high dimensionality, because this has proven to reduce the distance between the farthest and closest points \cite{beyer1999nearest}, likely diminishing the distinctive property of the feature vectors that is needed. 
+The characteristic of all the segment classes is that they reoccur either in previous or future episodes. To match frames from one episode with other episodes, feature vectors were constructed from the frames and the distances between these vectors were computed and saved. If a part of the video consecutively has matching feature vectors from previous or future episodes, then that part is labeled as a recurring segment. It is therefore important that the resulting feature vectors do not mismatch between actual recurring content and content that looks alike. Methods chosen for construction of the feature vectors should therefore not result in feature vectors of very high dimensionality, because this has proven to reduce the distance between the farthest and closest points \cite{beyer1999nearest}, likely diminishing the distinctive property of the feature vectors that is needed.
+
+We will do separate experiments for the bumper detection as they require a different approach for detection because they only contain recurring content from within the episode itself.
+
+All of the experiments were coded in Python and executed on AWS m4.2xlarge instances.
 
 \subsection{Data}
-The data set contains 83 video files originating from 16 different seasons of tv-shows, amounting to around 50 hours of content. Of most seasons only the first few episodes will be looked at to have a more varied data set. Originally these files were in .mxf full broadcast format, this meant each file being 25GB on average. All the files were converted to 1920p .mp4 files with FFmpeg \cite{ffmpeg}, resulting in each file being around 1 GB on average.
+The data set contains 80 video files originating from 16 different seasons of tv-shows, amounting to around 60 hours of content. Of most seasons only the first few episodes will be looked at to have a more varied data set. Originally these files were in .mxf full broadcast format, this meant each file being 25GB on average. All the files were converted to .mp4 files having a width of 320 pixels width and varying lengths, to maintain the aspect ratio. The resizing step was done to drastically decrease the computing time needed. The conversion was done with FFmpeg \cite{ffmpeg}.
 
 For each file the start and end timestamps for the recaps, opening credits, closing credits and previews were annotated in the HH:MM:SS format in a CSV file, so that it could be loaded and compared effectively.
 
+\begin{adjustbox}{center}
+	\begin{tabular}{ c | c c c c c c} 
+			& recaps	& openingcredits	& closingcredits	& previews	& recurring	& total \\
+		\hline
+		total seconds 	& 3275	& 4669	& 690	& 592	& 9423	& 188981 \\
+		\% of recurring	& 34.8\%& 49.5\%& 7.3\% & 6.3\% & -		& - \\
+		\% of total 	& 1.7\%	& 2.5\%	& 0.4\%	& 0.3\%	& 4.9\%	& - \\
+	\end{tabular}
+\end{adjustbox}
+
+
 \subsection{Feature Vector Construction}
-Video generally plays at 25 frames per second, frames very close to each other should only have very slight variations. That is why frames every 5 frames or just shotboundary frames will be taken into account to drastically reduce the computing complexity. We take all the video files of a season $E_x \in T$ and convert each file to a set of feature vectors $S_x = \{v_1, v_2, \dots, v_l\}$ with the function $f$.
+Video generally plays at 25 frames per second, frames very close to each other should only have very slight variations. That is why frames every 3 frames or just shotboundary frames will be taken into account to drastically reduce the computing complexity. We take all the video files of a season $E_x \in T$ and convert each file to a set of feature vectors $S_x = \{v_1, v_2, \dots, v_l\}$ with the function $f$.
 
 \[f(E_x) = S_x = \{v_1, v_2, \dots, v_l\}\]
 
@@ -287,11 +309,12 @@ We use 30 bins to represent a single color channel. These are then concatenated 
 
 A histogram is computed for every 5 frames in the video and then stored and saved in a list that preserves the order.
 
-\subsubsection{Local Color Texture Moments}
+\subsubsection{Color Texture Moments}
 TODO
 
 \subsubsection{CNN Features}
-TODO
+For the computation of the CNN feature vectors we use a Github re-implementation written in Python \cite{rmac-github}.
+
 
 \subsection{Matching and Detection}
 
@@ -304,14 +327,14 @@ All the resulting lists of feature vectors will be added to the index of an empt
 	\label{fig:diagram}
 \end{figure}
 
-All distances up until the 5th percentile will be taken into consideration. This is because on average 3.7\% of the content was skippable on average for the data that was used.
+All distances up until the 5th percentile will be taken into consideration. This is because on average 3.7\% of the content was skippable for the data that was used.
 
 \subsubsection{Bumper Detection}
 The methodology for detecting the bumpers within video content is different. Because a bumper only contains recurring content from within the video itself. It shows shots that will be shown after the break, these shots may not reoccur in other episodes within a season. Therefore we cannot use the same methodology as described before for detection.
 
 For the detection of bumpers we take a sliding window of 20 seconds of video frames, this will be the query. The index will consist of the remaining frames in the video, the resulting distances of the two nearest neighbors will be saved and then this process is repeated for the next 20 seconds in the video.
 
-After all the closest in-episode nearest neigbors are computed for each frame then from these results bumpers can be detected. We found that a global threshold for determining matches does not work well, probably because of the fact that bumpers are very short. Therefore we will use the ratio test described by Lowe \cite{lowe2004distinctive} for deciding on whether there is a match. With the ratio test the distance between the closest neighbor and second-closest neighbor is taken into account. The ratio of the distance of the closest neighbor to the distance of the second-closest neighbor determines whether there is a correct match, if the ratio is low then there is a higher chance for the match to be correct. In \cite{lowe2004distinctive} they classify a match to be correct if the ratio of the distances is equal to 0.8 or lower, we will however use a ratio of 0.7, to slightly reduce the number of false positive matches.
+After all the closest in-episode nearest neigbors are computed for each frame then from these results bumpers can be detected. We found that a global threshold for determining matches does not work well, probably because of the fact that bumpers are very short. Therefore we will use the ratio test described by Lowe \cite{lowe2004distinctive} for deciding on whether there is a match. With the ratio test the distance between the closest neighbor and second-closest neighbor is taken into account. The ratio of the distance of the closest neighbor to the distance of the second-closest neighbor determines whether there is a correct match, if the ratio is low then there is a higher chance for the match to be correct. In \cite{lowe2004distinctive} they classify a match to be correct if the ratio of the distances is equal to 0.8 or lower, we will experiment with a ratio $r \in \{0.5, 0.6, 0.7, 0.8\}$ to find the optimal ratio to apply for this problem.
 
 
 
@@ -323,79 +346,61 @@ The results will be evaluated as a retrieval problem. By doing so, the measures 
 
 \[\mathrm{recall} = \frac{\mathrm{detected\;relevant\;seconds}}{\mathrm{total\;relevant\;seconds}}\]
 
-\[F1 = \frac{2*\mathrm{recall} * \mathrm{precision}}{\mathrm{recall} + \mathrm{precision}}\]
-
-Because it is possible for the annotation to be slightly inaccurate, we mark detections that are within a 2 second margin of the relevant section, to also be relevant.
+Because it is possible for the manual annotation to also be slightly inaccurate, we mark detections that are within a 2 second margin of the relevant section, to also be relevant.
 
 \begin{center}
-	\begin{tabular}{ c c c } 
+	\begin{tabular}{ c c c c c c c} 
 		\hline
-		\textbf{Method} & \textbf{Precision} & \textbf{Recall} \\
-		\hline \hline
-		\multicolumn{3}{c}{\textbf{5\% lowest}} \\
+		\textbf{Method} & \textbf{P} & \textbf{R} & \textbf{P} & \textbf{R} & \textbf{P} & \textbf{R} \\
 		\hline
-		CH90fullsize 	& \textbf{0.877} 	& 0.819	\\
-		CH180 			& 0.867 	& 0.785 \\
-		CTM 			& 0.840 	& 0.790 \\
-		CNN 			& 0.782		& 0.796	\\
+		 & \multicolumn{2}{c}{5\% lowest} & \multicolumn{2}{c}{7.5\% lowest} & \multicolumn{2}{c}{10\% lowest} \\
 		\hline
-		\multicolumn{3}{c}{\textbf{7.5\% lowest}} \\
-		\hline
-		CH90fullsize 	& 0.769 	& 0.845	 \\	
-		CH180 			& 0.760 	& 0.848  \\
-		CTM 			& 0.775 	& 0.829  \\ 
-		CNN 			& 0.711		& 0.847	 \\		
-		\hline
-		\multicolumn{3}{c}{\textbf{10\% lowest}} \\
-		\hline
-		CH90fullsize 	& 0.711 	& 0.857	 \\ 
-		CH180 			& 0.700	 	& 0.852  \\ 
-		CTM 			& 0.726 	& \textbf{0.880} \\ 
-		CNN 			& 0.665		& 0.866  \\		
+		CH180 			& \textbf{0.884} 	& 0.687		& 0.830 	& 0.812 	& 0.786	 	& 0.855 \\
+		CTM 			& 0.883 	& 0.681 		& 0.841 	& 0.796 & 0.796 	& 0.853 \\
+		CNN 			& 0.854		& 0.733			& 0.808		& 0.838 & 0.748		& \textbf{0.892} \\
 		\hline
 	\end{tabular}
 \end{center}
 
 \subsection{Bumper detection}
-Because bumpers are short segments, the bumpers were evaluated in a different manner. We will not calculate precision and recall based on numbers of retrieved relevant seconds but whether a detection has overlap with a bumper. If a detection has overlap with a bumper, then this detection is marked as relevant. Precision and recall will thus be calculated according to the following formulas:
+Because bumpers are short segments, the bumpers were evaluated in a different manner. We do not calculate precision and recall based on numbers of retrieved relevant seconds but whether a detection has overlap with a bumper. If a detection has overlap with a bumper, then this detection is marked as relevant. Precision and recall will thus be calculated according to the following formulas:
 
 \[\mathrm{precision} = \frac{\mathrm{detections\;with\;overlap}}{\mathrm{total\;detections}}\]
 
 \[\mathrm{recall} = \frac{\mathrm{detections\;with\;overlap}}{\mathrm{total\;bumpers\;in\;episode}}\]
 
-The F1 score will be calculated according to the same formula as described before.
-
-\begin{table}[h!]
-	\centering
-	\begin{tabular}{ c c c c } 
+\begin{center}
+	\begin{tabular}{ c c c c c c c c c} 
 		\hline
-		\textbf{Method} & \textbf{Precision} & \textbf{Recall} & \textbf{F1} \\
+		\textbf{Method} & \textbf{P} & \textbf{R} & \textbf{P} & \textbf{R} & \textbf{P} & \textbf{R} & \textbf{P} & \textbf{R} \\
 		\hline
+		& \multicolumn{2}{c}{\textbf{0.5 ratio}} & \multicolumn{2}{c}{\textbf{0.6 ratio}} & \multicolumn{2}{c}{\textbf{0.7 ratio}} & \multicolumn{2}{c}{\textbf{0.8 ratio}} \\
 		\hline
-		\multicolumn{4}{c}{\textbf{0.5 ratio}} \\
-		\hline
-		CH 	& 0.216		& 0.521		& 0.305 \\ 
-		CTM & 0.145		& 0.542		& 0.229 \\ 
-		CNN & \textbf{0.611}		& 0.917		& \textbf{0.733} \\
-		\hline
-		\multicolumn{4}{c}{\textbf{0.6 ratio}} \\
-		\hline
-		CH 	& 0.146		& 0.583		& 0.233 \\ 
-		CTM & 0.089		& 0.667		& 0.158 \\ 
-		CNN & 0.484		& 0.938		& 0.638 \\
-		\hline
-		\multicolumn{4}{c}{\textbf{0.7 ratio}} \\
-		\hline
-		CH 	& 0.111		& 0.688		& 0.191 \\ 
-		CTM & 0.072		& 0.833		& 0.133 \\ 
-		CNN & 0.288		& \textbf{0.979}		& 0.445 \\
+		CH180 			& 0.195				& 0.312 		& 0.203		& 0.562		& 0.129		& 0.646 	& 0.085 	& 0.792 \\
+		CTM 			&  0.145			& 0.542 		& 0.089		& 0.667 	& 0.072		& 0.833 	& 0.072 	& 0.958 \\
+		CNN 			& \textbf{0.611}	& 0.917			& 0.484		& 0.938 	& 0.288		& \textbf{0.979} 	& 0.081 	& 0.979 \\
 		\hline
 	\end{tabular}
-	\caption{Results of the bumper detection}
-\end{table}
+\end{center}
 
 \section{Discussion} \label{discussion}
+%interpretations
+The results show that for the recurrent segment detection, the results for each different method are quite close. Meaning that the way the feature vectors are constructed does not improve the results significantly. Moreover, it is noticed that the detection results are decent but not extraordinary, meaning that there is room for improvement in the methodology. 
 
+From the results of the bumper detection we notice there is a difference in results for each method. The CNN-based method outperforms the other methods significantly. An explanation for this could be that the CNN feature vectors contain more distinctive properties then the other methods, this means that the ratio test can be used successfully. 
+
+%implications: why do the results matter
+With these results we set the first steps towards a fully automated solution for detection of recurrent content. Many research has been done on broadcast streams, this thesis presents the first results on VOD content.
+
+%limitations: what can't the results tell us
+The experiments were mostly performed on the first three episodes of a single season. However, an end-solution would take a whole season into account. Also, sometimes the recurring content spans across different seasons (recapping the previous season in the first episode for example), our experiments did also not take this attribute into account.
+
+The bumper detection is based on how RTL inserts its bumpers into content. With our experiments, we did not test if our methodology also applies to the bumpers of other publishers.
+
+%recommendations: future studies
+Ideally, future studies could be performed on a larger dataset consisting of full seasons of several shows to further prove the validity of this method and these future studies could try variations of the methodology and different ways of constructing the feature vectors. 
+\\
+\\
 - I did not do an extensive study on all of the TV shows, so other edge cases are possible in other TV-shows.\\
 - Very similar scenes occur regardless if it is a skippable segment or not\\
 - Distances can be hard to navigate\\
@@ -404,21 +409,14 @@ The F1 score will be calculated according to the same formula as described befor
 - Flash forwards/backwards confuse the model\\
 - Recaps consisting of shot of different camera angles not used before
 
-Answer the following subquestions:
-\\
-\textit{\textbf{How can image retrieval be used to detect recurring content?\newline}}\\
-\textit{\textbf{How accurate is each image retrieval approach?\newline}}\\
-\textit{\textbf{How can the best method be utilized in practice?\newline}}
-
-Then the main question:
-\textit{\textbf{How well do image retrieval methods perform in accurately detecting recurring content across a TV-show?\newline}}
-
-Then draw a conclusion
-
 Future work: \\
 - Take into account previous and next seasons\\
 - Different methodologies for construction of the feature vectors\\
 - Same methodology on different non-RTL data\\
+- Take sound into account
+
+\section{Conclusion}
+In this thesis we explored how well an image retrieval based approach could detect recurring content in a TV-show in an unsupervised way. Experiments were performed using three different kind of feature vectors. Based upon these experiments we can conclude that an image retrieval based approach definitely has potential for the unsupervised detection of recurrent content in TV-Shows. The experiments showed that the three different methods all get reasonable results. Even with the decent results, using the method for a metadata labeling task will still require manual supervision. Future research is needed to improve upon the methodology or to try other image retrieval techniques. With this research we set a baseline for the mostly unexplored research area of recurrent content detection that is not focused on TV-broadcasts but on TV-shows for VOD platforms. 
 
 \bibliographystyle{ieeetr}
 \bibliography{references}
